# gentlii-foundations

./: .env.example  .gitignore  README.md  RUNNING_LOCALLY.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-04-13-local-cli-foundations.md
src/gentlii_foundations/: __init__.py  analysis.py  cli.py  config.py  discovery.py  extraction.py  models.py  openai_client.py  paths.py  pipeline.py  prompts.py  render.py
src/gentlii_foundations/extractors/: docx.py  pdf.py
src/gentlii_foundations/prompt_templates/: shared.md
src/gentlii_foundations/prompt_templates/artifacts/: business-case.md  jtbd.md  product-charter.md  product-vision.md  strategy.md
test-products/crm/: Neo-CRM-initial.docx  Neo-CRM.pptx  user-flows.docx
test-products/insurance/: feature-ideas.docx  initiation-document.docx  research.docx
tests/: test_analysis.py  test_ci_workflow.py  test_cli_smoke.py  test_config.py  test_discovery.py  test_extraction.py  test_models.py  test_openai_client.py  test_paths.py  test_pipeline.py  test_prompts.py  test_render.py
tests/extractors/: test_docx_extractor.py  test_pdf_extractor.py
tests/integration/: test_crm_product.py
